unpackaged/main/default/objects/CA_Sporting_Event__c/CA_Sporting_Event__c.object-meta.xml
<CustomObject>
    <description>This will be the Sporting Event object for all accounts in Generic Template</description>
    <label>CA Sporting Event</label>
    <nameField>
        <label>CA Sporting Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CA Sporting Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>