unpackaged/main/default/objects/CA_Sporting_Event__c/fields/Account_Website__c.field-meta.xml
<CustomField>
    <fullName>Account_Website__c</fullName>
    <label>Account Website</label>
    <length>100</length>
    <type>Text</type>
</CustomField>