unpackaged/main/default/objects/CA_Sporting_Event__c/fields/Cost_of_additional_tickets__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_additional_tickets__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Cost of additional tickets</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>