unpackaged/main/default/objects/CA_Sporting_Event__c/fields/GES_AM_Email_Formula__c.field-meta.xml
<CustomField>
    <fullName>GES_AM_Email_Formula__c</fullName>
    <formula>IF((TEXT(GES_Account_Manager__c) == &quot;Jessica Bodner&quot;),&quot;jbodner@ges.com&quot;, 
IF((TEXT(GES_Account_Manager__c) == &quot;Stephanie Specht&quot;),&quot;sspecht@ges.com&quot;, 
IF((TEXT(GES_Account_Manager__c) == &quot;Jamie Brosmore&quot;),&quot;jbrosmore@ges.com&quot;, 
&quot;&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GES AM Email Formula</label>
    <type>Text</type>
</CustomField>