unpackaged/main/default/objects/CA_Sporting_Event__c/fields/Maximum_Headcount__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Headcount__c</fullName>
    <label>Maximum Headcount</label>
    <length>10</length>
    <type>Text</type>
</CustomField>