unpackaged/main/default/objects/CA_Sporting_Event__c/fields/Reason_for_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Cancellation__c</fullName>
    <label>Reason for Cancellation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Budget Cut</fullName>
            </value>
            <value>
                <fullName>Exhibit Space Sold Out</fullName>
            </value>
            <value>
                <fullName>Product Owner Decision</fullName>
            </value>
            <value>
                <fullName>Strategy Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>