unpackaged/main/default/objects/CA_Sporting_Event__c/fields/Sporting_Event_Name__c.field-meta.xml
<CustomField>
    <fullName>Sporting_Event_Name__c</fullName>
    <label>Sporting Event Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>