unpackaged/main/default/objects/CA_Sporting_Event__c/fields/Suite_Access_Time__c.field-meta.xml
<CustomField>
    <fullName>Suite_Access_Time__c</fullName>
    <label>Suite Access Time</label>
    <type>DateTime</type>
</CustomField>