unpackaged/main/default/objects/CA_Sporting_Event__c/fields/Ticket_Owner__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Owner__c</fullName>
    <label>Ticket Owner</label>
    <length>100</length>
    <type>Text</type>
</CustomField>